# python-pizza-planet

./: .coveragerc  .gitmodules  Makefile  README.md  data.json  manage.py  pyproject.toml
.github/workflows/: CI.yml
app/controllers/: order.py
app/decorators/: service_response.py
app/repositories/: managers.py  models.py  serializers.py
app/seeds/: seeder.py
app/services/: beverage.py  index.py  ingredient.py  order.py  report.py  size.py
app/test/: conftest.py
app/test/controllers/: test_beverage.py  test_order.py  test_report.py
app/test/fixtures/: order.py  report.py
app/test/services/: test_beverage.py  test_order.py  test_report.py  test_size.py
docs/deploy/: P_P_Deploy.puml  P_P_UI_Deploy.puml
