[tool.poetry]
name = "python-pizza-planet"
version = "0.1.0"
description = ""
authors = ["Javier Villegas <javillegasna@gmail.com>"]
readme = "README.md"
packages = [{include = "python_pizza_planet"}]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "1.7.5"
attrs = "21.4.0"
autopep8 = "1.6.0"
click = "8.0.3"
flake8 = "4.0.1"
flask = "2.0.2"
flask-cors = "3.0.10"
flask-marshmallow = "0.14.0"
flask-migrate = "3.1.0"
flask-script = "2.0.6"
flask-seeder = "1.2.0"
flask-sqlalchemy = "2.5.1"
greenlet = "1.1.2"
importlib-metadata = "4.10.1"
importlib-resources = "5.4.0"
iniconfig = "1.1.1"
itsdangerous = "2.0.1"
jinja2 = "3.0.3"
mako = "1.1.6"
markupsafe = "2.0.1"
marshmallow = "3.14.1"
marshmallow-sqlalchemy = "0.27.0"
mccabe = "0.6.1"
packaging = "21.3"
pluggy = "1.0.0"
py = "1.11.0"
pycodestyle = "2.8.0"
pyflakes = "2.4.0"
pyparsing = "3.0.7"
pytest = "6.2.5"
pytest-assume = "2.4.3"
six = "1.16.0"
sqlalchemy = "1.4.31"
toml = "0.10.2"
werkzeug = "2.0.2"
zipp = "3.7.0"
coverage = "6.5.0"
pytest-cov = "4.0.0"
black = "22.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
